--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Лучшие носки</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -29,6 +29,7 @@
                 <img class="img-4" src="/images/photo_5426982107151975904_y.jpg" alt="">
                 <p class="call-text text-align">Звоните нам: <br> <a class="tel" href="+7-938-529-45-37">+7-938-529-45-37</a></p>
             </div>
+            <p class="end textttt t text-align">Простите, если вдруг что то работает криво. У нас просто криворукий програмист</p>
         </div>   
 </body>
 </html>
